--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/matera/.netbeans/11.2/build.properties
+user.properties.file=C:\\Users\\Zelma Matera\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
